@@ -1,2 +1,2 @@
-This is the Linux port of the Blackdown Java(tm) Runtime Environment
+This is the Linux port of the Blackdown Java(tm) Runtime Environment,
 version 1.3.1.
