@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.8 2002/12/05 05:51:18 grant Exp $
+# $NetBSD: Makefile.common,v 1.9 2003/01/29 11:01:02 jlam Exp $
 #
 
 RELVERSION=	1.3.1
@@ -46,10 +46,8 @@ JVM_HOME=	${LOCALBASE}/java/blackdown-${RELVERSION}
 
 WRKSRC=		${WRKDIR}/${BASENAME}${RELVERSION}
 
-USE_BUILDLINK2=	# defined
-NO_CONFIGURE=	# defined
-NO_BUILD=	# defined
-NO_MTREE=	# defined, since we change PREFIX
+USE_BUILDLINK2=	yes
+NO_MTREE=	yes	# since we change PREFIX
 
 PLIST_SUBST+=	BLACKDOWN_ARCH=${BLACKDOWN_ARCH}
 
@@ -64,7 +62,9 @@ post-fetch:
 	fi
 .endif
 
-post-patch:
+do-build:	# nothing
+
+post-build:
 	${FIND} ${WRKSRC} -name '*.orig' -print | ${XARGS} ${RM} -f
 	${FIND} ${WRKSRC} -name '*.1.gz' -print | ${XARGS} ${GUNZIP_CMD}
 
