@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.4 2002/11/25 14:07:42 schmonz Exp $
+@comment $NetBSD: PLIST,v 1.5 2003/01/29 11:01:02 jlam Exp $
 CHANGES
 COPYRIGHT
 INSTALL
@@ -8,9 +8,11 @@ README
 bin/.java_wrapper
 bin/JavaPluginControlPanel
 bin/awt_robot
+bin/j2sdk-config
 bin/java
 bin/keytool
 bin/policytool
+bin/realpath
 bin/rmid
 bin/rmiregistry
 bin/tnameserv
@@ -28,19 +30,17 @@ bin/${BLACKDOWN_ARCH}/native_threads/rmid
 bin/${BLACKDOWN_ARCH}/native_threads/rmiregistry
 bin/${BLACKDOWN_ARCH}/native_threads/tnameserv
 bin/${BLACKDOWN_ARCH}/realpath
-bin/j2sdk-config
-bin/realpath
 lib/audio/soundbank.gm
 lib/cmm/CIEXYZ.pf
 lib/cmm/GRAY.pf
 lib/cmm/LINEAR_RGB.pf
 lib/cmm/PYCC.pf
 lib/cmm/sRGB.pf
-lib/content-types.properties
-lib/flavormap.properties
-lib/font.properties
-lib/font.properties.ja
-lib/font.properties.zh
+lib/content-types.properties.default
+lib/flavormap.properties.default
+lib/font.properties.default
+lib/font.properties.ja.default
+lib/font.properties.zh.default
 lib/fonts/LucidaBrightDemiBold.ttf
 lib/fonts/LucidaBrightDemiItalic.ttf
 lib/fonts/LucidaBrightItalic.ttf
@@ -77,7 +77,7 @@ lib/${BLACKDOWN_ARCH}/libpreemptive_close.so
 lib/${BLACKDOWN_ARCH}/libverify.so
 lib/${BLACKDOWN_ARCH}/libzip.so
 lib/${BLACKDOWN_ARCH}/native_threads/libhpi.so
-lib/images/cursors/cursors.properties
+lib/images/cursors/cursors.properties.default
 lib/images/cursors/invalid32x32.gif
 lib/images/cursors/motif_CopyDrop32x32.gif
 lib/images/cursors/motif_CopyNoDrop32x32.gif
@@ -86,7 +86,7 @@ lib/images/cursors/motif_LinkNoDrop32x32.gif
 lib/images/cursors/motif_MoveDrop32x32.gif
 lib/images/cursors/motif_MoveNoDrop32x32.gif
 lib/javaplugin.jar
-lib/jvm.cfg
+lib/jvm.cfg.default
 lib/jvm.hprof.txt
 lib/jvm.jcov.txt
 lib/locale/de/LC_MESSAGES/sunw_java_plugin.mo
@@ -101,12 +101,12 @@ lib/locale/zh.GBK/LC_MESSAGES/sunw_java_plugin.mo
 lib/locale/zh/LC_MESSAGES/sunw_java_plugin.mo
 lib/locale/zh_TW.BIG5/LC_MESSAGES/sunw_java_plugin.mo
 lib/locale/zh_TW/LC_MESSAGES/sunw_java_plugin.mo
-lib/psfont.properties.ja
-lib/psfontj2d.properties
+lib/psfont.properties.ja.default
+lib/psfontj2d.properties.default
 lib/rt.jar
 lib/security/cacerts
 lib/security/java.policy
-lib/security/java.security
+lib/security/java.security.default
 lib/sunrsasign.jar
 lib/tzmappings
 man/ja/man1/java.1
@@ -122,13 +122,10 @@ man/man1/tnameserv.1
 plugin/${BLACKDOWN_ARCH}/mozilla/javaplugin_oji.so
 plugin/${BLACKDOWN_ARCH}/netscape6
 @dirrm plugin/${BLACKDOWN_ARCH}/mozilla
-@dirrm plugin/${BLACKDOWN_ARCH}
-@dirrm plugin
 @dirrm man/man1
 @dirrm man/ja/man1
 @dirrm man/ja
 @dirrm man
-@dirrm lib/security
 @dirrm lib/locale/zh_TW/LC_MESSAGES
 @dirrm lib/locale/zh_TW.BIG5/LC_MESSAGES
 @dirrm lib/locale/zh_TW.BIG5
@@ -154,20 +151,12 @@ plugin/${BLACKDOWN_ARCH}/netscape6
 @dirrm lib/locale/de/LC_MESSAGES
 @dirrm lib/locale/de
 @dirrm lib/locale
-@dirrm lib/images/cursors
-@dirrm lib/images
 @dirrm lib/${BLACKDOWN_ARCH}/native_threads
 @dirrm lib/${BLACKDOWN_ARCH}/green_threads
 @dirrm lib/${BLACKDOWN_ARCH}/classic
-@dirrm lib/${BLACKDOWN_ARCH}
 @dirrm lib/fonts
-@exec ${MKDIR} %D/lib/ext
-@dirrm lib/ext
 @dirrm lib/cmm
 @dirrm lib/audio
-@exec ${MKDIR} %D/lib/applet
-@dirrm lib/applet
-@dirrm lib
 @dirrm bin/${BLACKDOWN_ARCH}/native_threads
 @dirrm bin/${BLACKDOWN_ARCH}/green_threads
 @dirrm bin/${BLACKDOWN_ARCH}
